<resources>
    <string name="app_name">Movie List</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_string">I\'m over <b>18 years</b> old</string>
    <string name="facebook_app_id">668298810386750</string>
    <string name="fb_login_protocol_scheme">fb668298810386750</string>
    <string name="dismiss">dismiss</string>
    <string name="logo">Logo</string>
    <string name="facebook">Facebook</string>
    <string name="register_now">Register now!</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="google">Google</string>
    <string name="or_via_social_networks">OR VIA SOCIAL NETWORKS</string>
    <string name="imagebottom">imageBottom - image description</string>
    <string name="favourite_movies">&#160;Favourite Movies</string>
    <string name="heart">heart - image description</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="filter_movies_by">Filter movies by</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="likes">Likes</string>
    <string name="my_favourites_only">My favourites only</string>
    <string name="top_movies">Top Movies</string>
    <string name="fire_image_description">fire - image description</string>
    <string name="full_name">Full name</string>
    <string name="logo_image_description">logo - image description</string>
    <string name="i_accept_the">I accept the</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="already_registered_log_in2">Already registered? \nLog in</string>
    <string name="cv_image_image_description">cv image - image description</string>
    <string name="movie_title">Movie Title</string>
    <string name="_2020_05_05">2020–05–05</string>
    <string name="_12345">12345</string>
    <string name="error_msg">Sorry! Couldn\'t fetch the movies.</string>
    <string name="btn_retry">Retry</string>
    <string name="splash_screen_drawable_img_description">Splash screen drawable img description</string>
    <string name="splash_screen_tv">Hello World, splash</string>
    <string name="social_networks">Social networks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_date">Movie Date</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="fragment_image_description">Fragment image description</string>
    <string name="imageview_fragment_description">ImageView fragment - description</string>
    <string name="my_api_key">e48bbf158c5a9860c3efbf60e5c4c5c9</string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="log_in">Log in</string>
    <string name="image_back_button">Image- Back Button</string>
    <string name="you_need_to_enter_a_password">You need to enter a password</string>
    <string name="password_length_x_characters">Password length cannot be smaller than 6 characters.</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="quit_message">Do you really want to leave?</string>
    <string name="quit_back_pressed">Quit</string>
    <string name="invalid_email_or_password">Incorrect email/password</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="checkbox_age_text">You need to be ABOVE 18 years old to use this app.</string>
    <string name="agree_to_eula_checkbox">You must agree to the terms and conditions to use this app.</string>
    <string name="successful_registration">Successfully registered!</string>
    <string name="fullname_smaller_than_x_characters">Field cannot be smaller than 3 characters.</string>
    <string name="eula_link">https://en.wikipedia.org/wiki/End-user_license_agreement</string>
    <string name="login_quit_positive_button">Ok</string>
    <string name="login_quit_negative_button">Cancel</string>
    <string name="welcome_user">\"Welcome %s\"</string>
    <string name="base_url_img_tablets">https://image.tmdb.org/t/p/w780</string>
    <string name="base_url_image_phones">https://image.tmdb.org/t/p/w500</string>
    <string name="please_wait">Please wait ...</string>
</resources>