<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentmainframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".fragments.PopularMoviesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentmainconstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:contentDescription="@string/fire_image_description"
                app:srcCompat="@drawable/ic_fire" />

            <TextView
                android:id="@+id/tvTopMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_movies"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLogout"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableEnd="@drawable/ic_signout"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/filter_movies_by"
            android:textColor="#6f6f6f"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilter"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/btnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/title"
                android:textColor="#1e1e1e"
                android:textSize="14sp"
                app:chipBackgroundColor="#e6e6e6"
                app:chipIcon="@drawable/ic_az"
                app:chipIconTint="#bbbec5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/date"
                android:textAllCaps="false"
                android:textColor="#1e1e1e"
                app:chipBackgroundColor="#e6e6e6"
                app:chipIcon="@drawable/ic_calendar"
                app:chipIconTint="#bbbec5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btnLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/likes"
                android:textAllCaps="false"
                android:textColor="#1e1e1e"
                app:chipBackgroundColor="#e6e6e6"
                app:chipIcon="@drawable/ic_heart_outline"
                app:chipIconTint="#bbbec5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btnFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_favourites_only"
                android:textAllCaps="false"
                android:textColor="#1e1e1e"
                app:chipBackgroundColor="#e6e6e6"
                app:chipIcon="@drawable/ic_heart_fill_favourites"
                app:chipIconTint="#bbbec5" />
        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#c3c4c8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>